[gd_scene load_steps=2 format=3 uid="uid://cqbriiim2ag1p"]

[ext_resource type="Script" path="res://component/interactable_component.gd" id="1_nvuwf"]

[node name="InteractableComponent" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_nvuwf")

[connection signal="body_entered" from="." to="." method="on_body_entered"]
[connection signal="body_exited" from="." to="." method="on_body_exited"]
